v2 in development, adding database storage and sessions state

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/htmx.org@1.9.12"></script>
     <link href="./css/output.css" rel="stylesheet" />
+
     <style>
       .typing-dots {
         display: flex;
@@ -45,41 +46,83 @@
     </style>
   </head>
 
-  <body
-    class="bg-gray-800 text-gray-200 min-h-screen flex flex-col items-center"
-  >
-    <div class="w-full bg-gray-900 text-center p-6 fixed top-0 left-0">
+  <body class="bg-gray-800 text-gray-200 min-h-screen">
+    <div class="w-full bg-gray-900 text-center p-6 fixed top-0 left-0 z-10">
       <div class="text-3xl font-bold">Personal Python Tutor</div>
       <div class="text-xl text-gray-400">Ask me questions about Python!</div>
     </div>
-    <div
-      id="chatArea"
-      class="flex flex-col w-full md:w-1/2 pt-32 pb-32 px-4 overflow-y-auto"
-    ></div>
-    <form
-      id="chatForm"
-      hx-post="/api/message"
-      hx-target="#chatArea"
-      hx-swap="beforeend"
-      hx-on::before-request="addUserMessageAndThinking(event)"
-      hx-on::after-request="removeThinkingBubble(); this.reset();"
-      class="fixed bottom-0 left-0 w-full bg-gray-900 p-4 flex justify-center"
-    >
-      <div class="flex w-full md:w-1/2 items-end space-x-2">
-        <textarea
-          id="chatInput"
-          name="message"
-          placeholder="Type your question..."
-          rows="1"
-          class="flex-grow resize-none bg-gray-700 text-white p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 overflow-y-auto"
-        ></textarea>
-        <button
-          class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-md"
+
+    <div class="pt-28 flex w-full min-h-screen">
+      <nav
+        class="flex flex-col w-64 bg-gray-900/80 border-r border-gray-700 px-4 py-6 space-y-2"
+      >
+        <div class="flex flex-row justify-between">
+          <span class="text-sm font-semibold text-gray-400">Conversations</span>
+          <button
+            class="cursor-pointer text-gray-400 hover:text-gray-200 transition-colors"
+          >
+            <svg
+              width="20px"
+              height="20px"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M11 4H7.2C6.0799 4 5.51984 4 5.09202 4.21799C4.71569 4.40974 4.40973 4.7157 4.21799 5.09202C4 5.51985 4 6.0799 4 7.2V16.8C4 17.9201 4 18.4802 4.21799 18.908C4.40973 19.2843 4.71569 19.5903 5.09202 19.782C5.51984 20 6.0799 20 7.2 20H16.8C17.9201 20 18.4802 20 18.908 19.782C19.2843 19.5903 19.5903 19.2843 19.782 18.908C20 18.4802 20 17.9201 20 16.8V12.5M15.5 5.5L18.3284 8.32843M10.7627 10.2373L17.411 3.58902C18.192 2.80797 19.4584 2.80797 20.2394 3.58902C21.0205 4.37007 21.0205 5.6364 20.2394 6.41745L13.3774 13.2794C12.6158 14.0411 12.235 14.4219 11.8012 14.7247C11.4162 14.9936 11.0009 15.2162 10.564 15.3882C10.0717 15.582 9.54378 15.6885 8.48793 15.9016L8 16L8.04745 15.6678C8.21536 14.4925 8.29932 13.9048 8.49029 13.3561C8.65975 12.8692 8.89125 12.4063 9.17906 11.9786C9.50341 11.4966 9.92319 11.0768 10.7627 10.2373Z"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </button>
+        </div>
+        <div 
+          class="flex flex-col" 
+          id="conversationArea"
+          hx-get="/conversations"
+          hx-trigger="load"
+          hx-swap="innerHTML"
         >
-          Send
-        </button>
-      </div>
-    </form>
+
+          <!-- Previous Conversations Go Here -->
+
+
+        </div>
+
+      </nav>
+      <main class="flex-1 flex justify-center">
+        <div
+          id="chatArea"
+          class="flex flex-col w-full md:w-1/2 pb-32 px-4 overflow-y-auto"
+        ></div>
+        <form
+          id="chatForm"
+          hx-post="/api/message"
+          hx-target="#chatArea"
+          hx-swap="beforeend"
+          hx-on::before-request="addUserMessageAndThinking(event)"
+          hx-on::after-request="removeThinkingBubble(); this.reset();"
+          class="fixed bottom-0 left-0 w-full bg-gray-900 p-4 flex justify-center"
+        >
+          <div class="flex w-full md:w-1/2 items-end space-x-2">
+            <textarea
+              id="chatInput"
+              name="message"
+              placeholder="Type your question..."
+              rows="1"
+              class="flex-grow resize-none bg-gray-700 text-white p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 overflow-y-auto"
+            ></textarea>
+            <button
+              class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-md"
+            >
+              Send
+            </button>
+          </div>
+        </form>
+      </main>
+    </div>
     <script>
       const textarea = document.getElementById("chatInput");
       const chatArea = document.getElementById("chatArea");
